src/less/topsoil/components/app-bar.less
/* 
================================================
app-bar component
================================================

Provides fixed area for application title and application level actions

.app-bar
  .app-title
  .common-actions
*/

.app-bar {
  display: flex;
  flex-flow: row;

  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 5rem;
  z-index: 1001;
  padding: 1rem 1rem;

  background-color: rgba(255, 255, 255, 0.93);

  font-size: 1.5rem; 
  line-height: 1.5;

  a {
    height: 100%;
    padding: 0.5rem 0.5rem;
  }
}


.app-title {
  display: flex;
  flex-flow: row;
  align-items: center;

  h1, h2, h3, h4, h5, h6 {
    margin-top: 0;
    margin-bottom: 0;
  }

  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  h3 {
    font-size: 1.2rem;
  }
}


.common-actions {
  display: flex;
  flex-flow: row;
  flex: 1;
  justify-content: flex-end;
  align-items: center;

  ul, li {
    list-style: none;
    padding: 0;
  }
  ul {
    margin-left: 1.4rem;
    margin-bottom: 0;
  }
  li {
    text-align: right;
    margin: 0 0 0 0.5rem;
  }
}


.common-actions__overflow {
  display: none;
}


.common-actions.is-expanded {
  .common-actions__overflow {
    display: flex;
    flex-flow: column;

    top: 5rem;
    right: 1rem;
    position: fixed;
    padding: 1rem;
    font-size: 1.5rem;
    background-color: rgba(20, 20, 20, 0.6);
    border-top: none;
    width: 100%;
    opacity: 0.9;

    li {
      padding: 0.5rem;
    }
  }
}



/* Larger than desktop */
@media (min-width: @bp-larger-than-desktop) {

  .app-title__toggle {
    display: none;
  }

  .common-actions.is-expanded {
    .common-actions__overflow {
      width: 50%;
    }
  }

  .common-actions__toggle {
    display: none;
  }

}

